Updated content on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
+<div style="font-family: Helvetica, Arial, Sans-Serif; padding: 100px;">
 <h1>Tim Dobbins</h1>
-<h2>UI/UX Designer of digital products and services</h2>
-<p>Thanks for stopping by. Please sit tight, a new site is being developed!</p>
+<h2>Designer of digital products and services</h2>
+<p>Thanks for stopping by. Please sit tight; a new site is being developed!</p>
 
-<ul>
-	<li><a href="https://www.linkedin.com/in/timdobbins">Tim Dobbins on LinkedIn</a></li>
-</ul>
+	<ul>
+		<li>
+			<a href="https://de.linkedin.com/in/timdobbins">Tim Dobbins on LinkedIn</a> - currently based in Berlin
+		</li>
+	</ul>
+
+
+</div>
