--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Tim Dobbins - Digital Product and Interaction Designer</h1>
-<p>Designer, photographer, and aspiring storyteller. Recently left corporate America for love and life in Berlin. Fresh to the whole living-in-Europe thing.</p>
-<p><%= link_to "Find me on Linkedin", "https://de.linkedin.com/in/timdobbins" %></p>
+<div class="jumbotron">
+	<h1>Digital Product and Service Designer</h1>
+	<p>Designer, photographer, and aspiring storyteller. Recently left corporate America for love and life in Berlin. Fresh to the whole living-in-Europe thing.</p>
+	<p><%= link_to "Find me on Linkedin", "https://de.linkedin.com/in/timdobbins" %></p>
+</div>
