--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="jumbotron">
-	<h1>Digital Product and Service Designer</h1>
-	<p>Designer, photographer, and aspiring storyteller. Recently left corporate America for love and life in Berlin. Fresh to the whole living-in-Europe thing.</p>
-	<p><%= link_to "Find me on Linkedin", "https://de.linkedin.com/in/timdobbins" %></p>
+	<h1>Tim Dobbins</h1>
+	<h2>Digital Product Designer</h2>
+	<p>7+ years of professional experience working with Fortune 50 brands, marketing agencies, and small business entrepreneurs. </p>
+	<p><%= link_to "Tim Dobbins on LinkedIn", "https://de.linkedin.com/in/timdobbins", class: "btn btn-primary" %></p>
 </div>
