--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron">
+<div class="container centered">
+	<div id="profile-pic"><img src="/assets/tim-dobbins.jpg" width="100%"></div>
 	<h1>Tim Dobbins</h1>
-	<h2>Digital Product Designer</h2>
-	<p>7+ years of professional experience working with Fortune 50 brands, marketing agencies, and small business entrepreneurs. </p>
-	<p><%= link_to "Tim Dobbins on LinkedIn", "https://de.linkedin.com/in/timdobbins", class: "btn btn-primary" %></p>
+	<p>Helping small teams bring big digital concepts to life.</p>
+	<p><%= link_to "LinkedIn", "https://de.linkedin.com/in/timdobbins", class: "btn btn-primary" %></p>
 </div>
