--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="container centered">
 	<div id="profile-pic"><img src="/assets/tim-dobbins.jpg" width="100%"></div>
 	<h1>Tim Dobbins</h1>
-	<p>Helping small teams bring big digital concepts to life.</p>
+	<h2>Digital Experience Designer</h2>
+	<p>Helping small teams bring big concepts to life.</p>
 	<p><%= link_to "LinkedIn", "https://de.linkedin.com/in/timdobbins", class: "btn btn-primary" %></p>
 </div>
