--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container centered">
-	<div id="profile-pic"><img src="/assets/tim-dobbins.jpg" width="100%"></div>
+	<div id="profile-pic"><%= image_tag "tim-dobbins.jpg", alt: "Slide Image" %></div>
 	<h1>Tim Dobbins</h1>
 	<h2>Digital Experience Designer</h2>
 	<p>Helping digital tranformation teams bring big concepts to life.</p>
