--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
 	<div id="profile-pic"><%= image_tag "tim-dobbins.jpg", alt: "Slide Image" %></div>
 	<h1>Tim Dobbins</h1>
 	<h2>Digital Experience Designer</h2>
-	<p>Helping digital tranformation teams bring big concepts to life.</p>
+
+	<p>Helping teams better serve their customers through closer collaboration, faster prototyping, and deeper customer insights. I design and develop interactive prototypes for mobile, tablet, and desktop.</p>
 	<p><%= link_to "LinkedIn", "https://de.linkedin.com/in/timdobbins", class: "btn btn-primary" %></p>
 </div>
